# MiniDB

./: .gitignore  CMakeLists.txt  Makefile  README.md  column.hpp  condition.cpp  condition.hpp  dataTypeValidation.hpp  database.txt  db.cpp  db.hpp  executor.cpp  executor.hpp  index.cpp  index.hpp  lexer.cpp  lexer.hpp  main.cpp  pager.cpp  pager.hpp  table.cpp  table.hpp  tokens.hpp  version.hpp
